docs/_results/run1/openmpi/logs/openmpi-1.0-zlib-experiment.err
/var/spool/slurmd/job98028/slurm_script: line 12: 40179 Killed                  spliced splice --package openmpi@1.0 --splice zlib --runner spack --replace zlib --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/openmpi/1.0/zlib/experiment.json
==> Error: ProcessError: Command exited with status 2:
    'make' '-j16' 'V=1'

6 errors found in build log:
     2201    then mv -f "$depbase.Tpo" "$depbase.Plo"; else rm -f "$depbase.Tpo
             "; exit 1; fi
     2202    mkdir .libs
     2203    mkdir .libs
     2204    mkdir: cannot create directory '.libs': File exists
     2205     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I
             /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oep
             lxirokndt2snyit3u3e/spack-src/opal/mca/memory/malloc_hooks -I../..
             /../../include -I../../../../include -I/var/tmp/sochat1/spack-stag
             e/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-s
             rc/include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-
             lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src -I../../../.. -I../../.
             ./../include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.
             0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal -I/var/tmp/socha
             t1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyi
             t3u3e/spack-src/orte -I/var/tmp/sochat1/spack-stage/spack-stage-op
             enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/ompi -O3 -DND
             EBUG -fno-strict-aliasing -pthread -MT memory_malloc_hooks.lo -MD 
             -MP -MF .deps/memory_malloc_hooks.Tpo -c memory_malloc_hooks.c  -f
             PIC -DPIC -o .libs/memory_malloc_hooks.o
     2206     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I
             /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oep
             lxirokndt2snyit3u3e/spack-src/opal/mca/memory/malloc_hooks -I../..
             /../../include -I../../../../include -I/var/tmp/sochat1/spack-stag
             e/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-s
             rc/include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-
             lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src -I../../../.. -I../../.
             ./../include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.
             0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal -I/var/tmp/socha
             t1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyi
             t3u3e/spack-src/orte -I/var/tmp/sochat1/spack-stage/spack-stage-op
             enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/ompi -O3 -DND
             EBUG -fno-strict-aliasing -pthread -MT memory_malloc_hooks_compone
             nt.lo -MD -MP -MF .deps/memory_malloc_hooks_component.Tpo -c memor
             y_malloc_hooks_component.c  -fPIC -DPIC -o .libs/memory_malloc_hoo
             ks_component.o
  >> 2207    memory_malloc_hooks.c:34:8: error: conflicting type qualifiers for
              '__malloc_initialize_hook'
     2208       34 | void (*__malloc_initialize_hook) (void) = opal_memory_mall
             oc_hooks_init;
     2209          |        ^~~~~~~~~~~~~~~~~~~~~~~~
     2210    In file included from memory_malloc_hooks.c:24:
     2211    /usr/include/malloc.h:169:38: note: previous declaration of '__mal
             loc_initialize_hook' was here
     2212      169 | extern void (*__MALLOC_HOOK_VOLATILE __malloc_initialize_h
             ook) (void)
     2213          |                                      ^~~~~~~~~~~~~~~~~~~~~
             ~~~

     ...

     2281       98 |     __realloc_hook = opal_mem_free_realloc_hook;
     2282          |     ^~~~~~~~~~~~~~
     2283    In file included from memory_malloc_hooks.c:24:
     2284    /usr/include/malloc.h:178:39: note: declared here
     2285      178 | extern void *(*__MALLOC_HOOK_VOLATILE __realloc_hook) (voi
             d *__ptr,
     2286          |                                       ^~~~~~~~~~~~~~
  >> 2287    make[4]: *** [memory_malloc_hooks.lo] Error 1
     2288    make[4]: *** Waiting for unfinished jobs....
     2289     /p/vast1/build/spack/lib/spack/env/gcc/gcc -DHAVE_CONFIG_H -I. -I
             /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oep
             lxirokndt2snyit3u3e/spack-src/opal/mca/memory/malloc_hooks -I../..
             /../../include -I../../../../include -I/var/tmp/sochat1/spack-stag
             e/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-s
             rc/include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-
             lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src -I../../../.. -I../../.
             ./../include -I/var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.
             0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal -I/var/tmp/socha
             t1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyi
             t3u3e/spack-src/orte -I/var/tmp/sochat1/spack-stage/spack-stage-op
             enmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/ompi -O3 -DND
             EBUG -fno-strict-aliasing -pthread -MT memory_malloc_hooks_compone
             nt.lo -MD -MP -MF .deps/memory_malloc_hooks_component.Tpo -c memor
             y_malloc_hooks_component.c -o memory_malloc_hooks_component.o >/de
             v/null 2>&1
     2290    make[4]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal/mca/mem
             ory/malloc_hooks'
  >> 2291    make[3]: *** [all-recursive] Error 1
     2292    make[3]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal/mca/mem
             ory'
  >> 2293    make[2]: *** [all-recursive] Error 1
     2294    make[2]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal/mca'
  >> 2295    make[1]: *** [all-recursive] Error 1
     2296    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-o
             penmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-src/opal'
  >> 2297    make: *** [all-recursive] Error 1

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-openmpi-1.0-lju4cxsmi6oeplxirokndt2snyit3u3e/spack-build-out.txt

Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
